02_project_concepts/kind_cluster/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginxnotesingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /nginx
            backend:
              service:
                name: nginxservice
                port:
                  number: 80
          - pathType: Prefix
            path: /
            backend:
              service:
                name: notesappservice
                port:
                  number: 8000
